# functional-design

labs/lab1-1/: LICENSE  README.md  company-parser.cabal  stack.yaml
labs/lab1-1/resources/: io.gogl
labs/lab1-1/src/: CompanyParsers.hs  Main.hs  Parser.hs  Types.hs
labs/lab1-2/: README.md  watch-dir.cabal
labs/lab1-2/src/: FileWatcher.hs  FileWatcherTypes.hs  Main.hs
writeups/decorator-pattern/: decorator-pattern.org
writeups/strategy-pattern/: strategy-pattern.org
writeups/template-pattern/: template-pattern.org
