name:                watch-dir
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jcolemang/watch-dir#readme
license:             BSD3
license-file:        LICENSE
author:              James Coleman Gibson
maintainer:          example@example.com
copyright:           2017 James Coleman Gibson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable watch-dir
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , path
                     , fsnotify
                     , stm
